# DAT320_DL_Program

./: pyproject.toml
week_1/: DAT 310 pytorch and gradient descent.ipynb  DAT 310 pytorch intro iris Solution.ipynb  DAT 310 pytorch intro iris.ipynb  DAT 310 pytorch_lab_ex_1.ipynb  DAT 310 pytorch_lab_ex_2.ipynb
