[tool.poetry]
name = "dat320-3"
version = "0.1.0"
description = ""
authors = ["Sameer Sharma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
torchvision = "^0.17.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
